新增profilemode下使用多個圖片 & 修改404頁面 & 新增favicon

--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -2,3 +2,7 @@
 {{- /*     Insert any custom code (web-analytics, resources, etc.) - it will appear in the <head></head> section of every page. */ -}}
 {{- /*     Can be overwritten by partial with the same name in the global layouts. */ -}}
 {{- /* Head custom content area end */ -}}
+
+<link rel="icon" href="{{ site.Params.assets.favicon }}">
+<link rel="icon" href="{{ site.Params.assets.favicon16x16 }}" size="16x16">
+<link rel="icon" href="{{ site.Params.assets.favicon32x32 }}" size="32x32">
