--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
   {{- if site.Copyright }}
   <span>{{ site.Copyright | markdownify }}</span>
   {{- else }}
-  <span>&copy; {{ now.Year }} <a href="{{ "" | absURL }}">{{ site.Title }}</a> v4.0.4</span>
+  <span>&copy; {{ now.Year }} <a href="{{ "" | absURL }}">{{ site.Title }}</a>{{ site.Params.version }}</span>
   {{- end -}}
   <span style="display: inline-block; margin-left: 1em;">
     <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA</a>
