--- a/assets/css/extended/blank.css
+++ b/assets/css/extended/blank.css
@@ -25,3 +25,7 @@ lgray {
 lmHide {
     color: white;
 }
+
+mark {
+	background: linear-gradient(transparent 40%,rgba(255,255,255,0) 40%, #FFF176 90%,transparent 95%);
+}
