--- a/assets/css/extended/blank.css
+++ b/assets/css/extended/blank.css
@@ -27,5 +27,5 @@ lmHide {
 }
 
 mark {
-	background: #FFF176;
+    background: linear-gradient(transparent 40%,rgba(255,255,255,0) 40%, #FFF176 90%,transparent 95%);	
 }
