--- a/assets/css/extended/blank.css
+++ b/assets/css/extended/blank.css
@@ -22,8 +22,12 @@ lgray {
     color: lightgray;
 }
 
-lmHide {
-    color: white;
+hide {
+    color: var(--theme);
+}
+
+body.dark hide {
+    color: var(--theme);
 }
 
 mark {
