--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -3,6 +3,7 @@
 {{- /*     Can be overwritten by partial with the same name in the global layouts. */ -}}
 {{- /* Head custom content area end */ -}}
 
-<link rel="icon" href="{{ site.Params.assets.favicon }}">
-<link rel="icon" href="{{ site.Params.assets.favicon16x16 }}" size="16x16">
-<link rel="icon" href="{{ site.Params.assets.favicon32x32 }}" size="32x32">
+<link rel="icon" href="{{ .Site.BaseURL }}{{ site.Params.assets.favicon }}">
+<link rel="icon" href="{{ .Site.BaseURL }}{{ site.Params.assets.favicon16x16 }}" size="16x16">
+<link rel="icon" href="{{ .Site.BaseURL }}{{ site.Params.assets.favicon32x32 }}" size="32x32">
+<script defer src="{{ .Site.BaseURL }}/js/hover_tooltip.js"></script>
