--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -17,7 +17,7 @@ document.addEventListener("DOMContentLoaded",()=>{renderMathInElement(document.b
 <script defer src="{{ .Site.BaseURL }}/js/chart_parser.js"></script>
 {{- end -}}
 
-{{- if .Params.noTips -}}
+{{- if not .Params.noTips -}}
 <script src="{{ .Site.BaseURL }}/js/hover_tooltip.js"></script>
 {{- end -}}
 
