--- a/layouts/partials/page_footer.html
+++ b/layouts/partials/page_footer.html
@@ -128,3 +128,7 @@
   mediumZoom('.post-content img:not([no-zoom])');
 </script>
 {{- end }}
+
+{{- if not .Params.noTips -}}
+<script src="{{ .Site.BaseURL }}/js/hover_tooltip.js"></script>
+{{- end -}}
