--- a/assets/css/common/main.css
+++ b/assets/css/common/main.css
@@ -182,6 +182,38 @@ pre {
     user-select: none;
 }
 
+/* .copy-show-block {
+    width: 15ex;
+    height: 4ex;
+    background: rgb(103, 242, 133);
+    margin:0 auto;
+    visibility: hidden;
+    text-align: center;
+    color: rgb(255, 255, 255);
+}
+
+.shake {
+    animation: shake 800ms ease-in-out;
+}
+@keyframes shake {
+    10%, 90% { transform: translate3d(-1px, 0, 0); }
+    20%, 80% { transform: translate3d(+2px, 0, 0); }
+    30%, 70% { transform: translate3d(-4px, 0, 0); }
+    40%, 60% { transform: translate3d(+4px, 0, 0); }
+    50% { transform: translate3d(-4px, 0, 0); }
+}
+
+.crazyShake {
+    animation: shake2 800ms ease-in-out;
+}
+@keyframes shake2 {
+    10%, 90% { transform: translate3d(-1px, -1px, 0); }
+    20%, 80% { transform: translate3d(+2px, -2px, 0); }
+    30%, 70% { transform: translate3d(-4px, 4px, 0); }
+    40%, 60% { transform: translate3d(+4px, 4px, 0); }
+    50% { transform: translate3d(-4px, 0, 0); }
+} */
+
 div.highlight:hover .copy-code,
 pre:hover .copy-code {
     display: block;
