--- a/assets/css/common/main.css
+++ b/assets/css/common/main.css
@@ -22,8 +22,8 @@
     display: inline-block;
     background: var(--line-yellow) bottom left/100% 0.3em no-repeat;
 }
-mark {
-    /*
+/* mark {
+    
     margin: 0 -0.4em;
     padding: 0em 0.4em;
     border-radius: 0.8em 0.3em;
@@ -36,8 +36,8 @@ mark {
     );
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone;
-    */
-}
+   
+} */
 
 /* for home and section page */
 .first-entry {
