--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -1,20 +1,24 @@
 {{- if .Params.markmap -}}
 <script src="https://cdn.jsdelivr.net/npm/markmap-autoloader"></script>
-<script defer src="{{ .Site.BaseURL }}/js/markmap.js"></script>
+<script defer src="{{ .Site.BaseURL }}js/markmap.js"></script>
 {{- end -}}
 
 {{- if .Params.katex -}}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.2/dist/katex.min.css" integrity="sha384-bYdxxUwYipFNohQlHt0bjN/LCpueqWz13HufFEV1SUatKs1cm4L6fFgCi1jT643X" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.2/dist/katex.min.js" integrity="sha384-Qsn9KnoKISj6dI8g7p1HBlNpVx0I8p1SvlwOldgi3IorMle61nQy4zEahWYtljaz" crossorigin="anonymous"></script>
-<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.2/dist/contrib/auto-render.min.js" integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.2/dist/contrib/auto-render.min.js" integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05" crossorigin="anonymous" onload="renderMathInElement(document.querySelector('div.post-content'));"></script>
 <script>
-document.addEventListener("DOMContentLoaded",()=>{renderMathInElement(document.body,{delimiters:[{left:"$$",right:"$$",display:true},{left:"$",right:"$",display:false}]});});
+document.addEventListener("DOMContentLoaded",()=>{renderMathInElement(document.querySelector('div.post-content'),{delimiters:[{left:"$$",right:"$$",display:true},{left:"$",right:"$",display:false}]});});
 </script>
 {{- end -}}
 
 {{- if .Params.chart -}}
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script defer src="{{ .Site.BaseURL }}/js/chart_parser.js"></script>
+{{- end -}}
+
+{{- if not .Params.noTips -}}
+<script src="{{ .Site.BaseURL }}js/hover_tooltip.js"></script>
 {{- end -}}
 
 {{- if not .Date.IsZero -}}
