不知道為啥把tip弄爆了

--- a/layouts/partials/page_footer.html
+++ b/layouts/partials/page_footer.html
@@ -160,3 +160,7 @@
   mediumZoom('.post-content img:not([no-zoom])');
 </script>
 {{- end }}
+
+{{- if not .Params.noTips -}}
+<script src="{{ .Site.BaseURL }}js/hover_tooltip.js"></script>
+{{- end -}}
