--- a/layouts/partials/page_footer.html
+++ b/layouts/partials/page_footer.html
@@ -48,7 +48,7 @@
 
       return setTimeout(() => {
         // reset to default
-        copybutton.innerText = copyText[0];
+        copybutton.innerText = '複製';
         copybutton.style.backgroundColor = 'rgba(78,78,78,.8)';
         copyClickTime = 0;
       }, 2000);
