解決本地js無法載入問題

--- a/layouts/partials/page_footer.html
+++ b/layouts/partials/page_footer.html
@@ -171,5 +171,5 @@
 {{- end }}
 
 {{- if not .Params.noTips -}}
-<script src="{{ .Site.BaseURL }}js/hover_tooltip.js"></script>
+<script src="{{ .Site.BaseURL }}/js/hover_tooltip.js"></script>
 {{- end -}}
