--- a/layouts/partials/post_meta.html
+++ b/layouts/partials/post_meta.html
@@ -1,6 +1,6 @@
 {{- if .Params.markmap -}}
 <script src="https://cdn.jsdelivr.net/npm/markmap-autoloader"></script>
-<script defer src="{{ .Site.BaseURL }}js/markmap.js"></script>
+<script defer src="{{ .Site.BaseURL }}/js/markmap.js"></script>
 {{- end -}}
 
 {{- if .Params.katex -}}
